--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,12 @@
   color: #ffffff;
 }
 
+.hero-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 12px;
+}
 .hero-description {
   margin: 10px 50px;
   font-size: 20px;
