--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@
 
 .hero-container {
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   width: 1240px;
