--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1200px;
-  margin: 0 auto;
+  width: 1240px;
+  height: 60px;
+  margin-top: 20px;
   padding: 0 20px;
 }
 
@@ -78,7 +79,7 @@
   width: 1240px;
   height: 600px;
   margin: 160px auto;
-  border-radius: 20px;
+  border-radius: 30px;
   background-color: #1d1d1d;
   padding: 60px;
   box-sizing: border-box;
@@ -118,8 +119,10 @@
 
 .panel-container {
   display: flex;
+  width: 1440px;
+  height: 112px;
   justify-content: center;
-  margin: 20px;
+  margin-top: 910px;
 }
 
 .panel-header {
@@ -148,6 +151,8 @@
 
 .about-container {
   display: flex;
+  max-width: 1240px;
+  max-height: 344px;
   flex-direction: row;
   width: 1240px;
   height: 600px;
@@ -158,7 +163,7 @@
 .about-image {
   width: 120px;
   height: 280px;
-  border-radius: 50%;
+  border-radius: 100%;
 }
 .about-text {
   width: 630px;
