--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
   width: 1240px;
   height: 60px;
   margin-top: 20px;
+  margin-left: 100px;
   padding: 0 20px;
 }
 
@@ -78,7 +79,8 @@
   justify-content: space-between;
   width: 1240px;
   height: 600px;
-  margin: 160px auto;
+  margin-top: 160px;
+  margin-left: 100px;
   border-radius: 30px;
   background-color: #1d1d1d;
   padding: 60px;
@@ -121,8 +123,8 @@
   display: flex;
   width: 1440px;
   height: 112px;
+  margin-top: 70px;
   justify-content: center;
-  margin-top: 910px;
 }
 
 .panel-header {
@@ -156,17 +158,21 @@
   flex-direction: row;
   width: 1240px;
   height: 600px;
-  margin: 50px;
+  margin-top: 150px;
   color: white;
 }
 
 .about-image {
-  width: 120px;
-  height: 280px;
-  border-radius: 100%;
+  width: 240px;
+  height: 560px;
+  border-radius: 1000px;
+  transform: rotate(90deg);
 }
 .about-text {
-  width: 630px;
-  margin: 20px;
-  font-size: 8px;
+  max-width: 630px;
+  max-height: 220px;
+  gap: 40px;
+  font-size: 16px;
+  letter-spacing: -2%;
+  line-height: 20px;
 }
