--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,7 @@
   width: 1440px;
   height: 112px;
   margin-top: 70px;
+  margin-bottom: 20px;
   justify-content: center;
 }
 
@@ -131,7 +132,7 @@
   text-align: center;
   padding: 10px;
   font-weight: normal;
-  font-size: 59px;
+  font-size: 50px;
   line-height: 64px;
   letter-spacing: -2%;
   text-transform: uppercase;
@@ -140,6 +141,14 @@
 
 .panel-highlight {
   color: #fff;
+}
+
+.about-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 20px;
+  margin-left: 100px;
 }
 
 .about-title {
@@ -153,15 +162,17 @@
   color: #bea69e;
 }
 
-.about-container {
-  width: 100%;
-  max-width: 1240px;
-  margin: 40px auto;
+.about-description-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  width: 1240px;
+  height: 560px;
+  background-color: #1d1d1d;
+  border-radius: 30px;
   padding: 40px;
-  color: white;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-  box-sizing: border-box;
 }
 
 .about-content {
@@ -176,10 +187,18 @@
   border-radius: 1000px;
   transform: rotate(90deg);
 }
-.about-text {
-  max-width: 630px;
+.about-text-first {
+  max-width: 314px;
   max-height: 220px;
-  gap: 40px;
+  font-size: 16px;
+  letter-spacing: -2%;
+  line-height: 20px;
+  margin-right: 40px;
+}
+
+.about-text-second {
+  max-width: 276px;
+  max-height: 215px;
   font-size: 16px;
   letter-spacing: -2%;
   line-height: 20px;
