--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,7 @@
   display: flex;
   flex-direction: row;
   margin-bottom: 20px;
+  margin-left: ;
   width: 1240px;
   height: 240px;
   padding: 50px;
@@ -181,8 +182,10 @@
 }
 .about-image {
   width: 240px;
+  height: 560px;
   border-radius: 1000px;
   transform: rotate(90deg);
+  margin-left: 370px;
 }
 .about-text-first {
   max-width: 314px;
