--- a/css/styles.css
+++ b/css/styles.css
@@ -145,16 +145,21 @@
 
 .about-container {
   display: flex;
-  max-width: 1240px;
-  max-height: 344px;
+  width: 1240px;
+  height: 344px;
   flex-direction: column;
   align-items: flex-start;
-  margin-bottom: 20px;
   margin-left: 100px;
+  gap: 50px;
 }
 
 .about-title {
-  text-indent: 50px;
+  weight: 196;
+  height: 54px;
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 54px;
+  letter-spacing: -4%;
   color: white;
   font-size: 30px;
   margin-top: 150px;
@@ -167,43 +172,31 @@
 .about-description-container {
   display: flex;
   flex-direction: row;
-  margin-bottom: 20px;
-  margin-left: ;
-  width: 1240px;
-  height: 240px;
+  justify-content: space-between;
+  max-width: 1240px;
+  max-height: 240px;
   padding: 50px;
 }
 .about-image {
   width: 240px;
   height: 560px;
-  margin: 0 40px 0 0;
   object-fit: cover;
   border-radius: 1000px;
   transform: rotate(90deg);
 }
 .about-content {
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: space-between;
-  gap: 40px;
-  margin-right: 370px;
-}
-
-.about-text-first {
-  color: #fff;
-  max-width: 314px;
+  max-width: 630px;
   max-height: 220px;
-  font-size: 16px;
-  letter-spacing: -2%;
-  line-height: 20px;
-  margin-right: 40px;
+  gap: 40px;
 }
 
-.about-text-second {
+.about-text {
   color: #fff;
-  max-width: 276px;
-  max-height: 215px;
   font-size: 16px;
   letter-spacing: -2%;
   line-height: 20px;
 }
+
