--- a/css/styles.css
+++ b/css/styles.css
@@ -200,3 +200,40 @@
   line-height: 20px;
 }
 
+.our-courses-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 1240px;
+  height: 562px;
+  margin-left: 100px;
+}
+
+.our-courses-header {
+  width: 1240px;
+  height: 562px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.our-courses-title {
+  width:265px;
+  height: 54px;
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 54px;
+  letter-spacing: -4%;
+  color: white;
+}
+.our-courses-highlight {
+  color: #bea69e;
+}
+
+.our-courses-description {
+  width: 565px;
+  height: 60px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  letter-spacing: -2%;
+}
