--- a/css/styles.css
+++ b/css/styles.css
@@ -465,6 +465,12 @@
   paragraph-spacing:18px;
 }
 
+.sign-up-image-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 .sign-up-image{
   width: 190px;
   height: 288px;
@@ -476,7 +482,7 @@
   background-color: #BEA69E;
 }
 
-sign-up-image-camera{
+.sign-up-image-camera{
   width: 350px;
   height: 540px;
   object-fit: contain;
