--- a/css/styles.css
+++ b/css/styles.css
@@ -24,39 +24,49 @@
   height: 60px;
   margin-top: 20px;
   margin-left: 100px;
-  padding: 0 20px;
 }
 
 .menu {
-  display: flex;
-  align-items: center;
-  border: 1px solid #e7e9fc;
+  width:982px;
+  height:60px;
+  border: 1px solid #FFFFFF33;
   border-radius: 12px;
+  display:flex;
+  align-items:center;
+  justify-content:space-around;
 }
 
 .header-logo {
-  font-size: 24px;
+  width:123px;
+  height:16px;
+  padding-top:22px;
+  padding-left:50px;
   font-weight: bold;
   text-decoration: none;
   color: #fff;
-  margin-right: 30px;
 }
 
-.menu ul {
-  list-style: none;
+.menu-list {
   display: flex;
+  max-weight:550px;
+  max-height:18px;
+  align-items: center;
+  gap:40px;
+  font-size:14px;
+  list-style: none;
   margin: 0;
   padding: 0;
 }
 
 .menu li {
-  margin-left: 20px;
+  color: #fff;
+  font-size: 14px;
 }
 
 .menu a {
   text-decoration: none;
   color: #fff;
-  padding: 5px 10px;
+  padding: 1px 10px;
   transition: background-color 0.3s;
 }
 
@@ -65,17 +75,18 @@
 }
 
 .menu-toggle {
-  font-size: 16px;
-  font-weight: bold;
+  max-width:238px;
+  max-height:60px;
+  border: 1px solid #e7e9fc;
+  border-radius: 12px;
+  padding:16px 84px;
+  font-size: 18px;
+  font-weight: 700px;
   color: black;
   background-color: white;
   display: flex;
   align-items: center;
-  margin: 20px 80px;
-  padding: 15px 30px;
-  border: 1px solid #e7e9fc;
-  border-radius: 50px;
-  cursor: pointer;
+  white-space: nowrap;
 }
 
 .hero-container {
@@ -85,7 +96,7 @@
   justify-content: space-between;
   width: 1240px;
   height: 600px;
-  margin-top: 160px;
+  margin-top: 80px;
   margin-left: 100px;
   border-radius: 30px;
   background-color: #1d1d1d;
@@ -490,4 +501,66 @@
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
   background-color: #121212;
+}
+
+.reviews-container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  width: 1240px;
+  height: 300px;
+  margin-left: 100px;
+  margin-top: 160px;
+  gap:50px;
+}
+
+.reviews-title {
+  width: 171px;
+  height: 54px;
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 54px;
+  letter-spacing: -4%;
+  color: white;
+}
+
+.review-card-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  max-width: 1240px;
+  max-height: 196px;
+  gap: 20px;
+}
+
+.review-card{
+  width: 610px;
+  height: 196px;
+  background-color: #1d1d1d;
+  border: 1px solid #FFFFFF33;
+  border-radius: 12px;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+}
+
+.review-card-icon{
+  width: 211px;
+  height: 56px;
+  padding: 20px 20px;
+  gap:10px;
+  display: flex;
+  flex-direction: row;
+}
+
+.review-text{
+  width: 570px;
+  height: 80px;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: -2%;
+  color: #FFFFFF;
+  padding-top:96px;
+  padding-left:20px;
 }
