--- a/css/styles.css
+++ b/css/styles.css
@@ -22,8 +22,8 @@
   align-items: center;
   width: 1240px;
   height: 60px;
-  margin-top: 20px;
-  margin-left: 50px;
+  margin: 20px 100px 0 100px;;
+
 }
 
 .menu {
