--- a/css/styles.css
+++ b/css/styles.css
@@ -19,9 +19,12 @@
 .menucontainer {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   width: 1240px;
   height: 60px;
-  margin: 20px 100px 0 100px;
+  gap: 74px;
+  margin-top: 20px;
+  margin-left: 100px;
 }
 
 .menu {
@@ -85,6 +88,7 @@
   display: flex;
   align-items: center;
   white-space: nowrap;
+  margin-right:100px;
 }
 
 .hero-container {
