--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,6 @@
   justify-content: space-between;
   width: 1240px;
   height: 60px;
-  gap: 74px;
   margin-top: 20px;
   margin-left: 100px;
 }
@@ -34,7 +33,7 @@
   border-radius: 12px;
   display:flex;
   align-items:center;
-  justify-content:space-around;
+  justify-content:space-between;
 }
 
 .header-logo {
