--- a/css/styles.css
+++ b/css/styles.css
@@ -54,8 +54,8 @@
   gap:40px;
   font-size:14px;
   list-style: none;
-  margin: 0;
-  padding: 0;
+  padding-right: 50px;
+  padding-top:21px;
 }
 
 .menu li {
