--- a/css/styles.css
+++ b/css/styles.css
@@ -99,8 +99,6 @@
   margin-left: 100px;
   border-radius: 30px;
   background-color: #1d1d1d;
-  padding: 60px;
-  box-sizing: border-box;
 }
 
 .hero-text {
@@ -108,11 +106,16 @@
 }
 
 .hero {
+  width:563px;
+  height:204px;
+  display:flex;
+  margin-top:80px;
+  padding-left:50px;
   font-size: 64px;
-  font-weight: 400;
-  line-height: 1.2;
+  font-weight: 500;
+  line-height: 68px;
+  letter-spacing:-4%;
   color: #ffffff;
-  margin: 0 0 40px;
 }
 
 .highlight {
@@ -121,18 +124,22 @@
 }
 
 .hero-description {
+  display:flex;
+  width:418px;
+  height:54px;
   font-size: 18px;
   line-height: 1.5;
   color: #ffffff;
-  margin: 0;
+  margin-top: 20px;
+  padding-left:50px;
 }
 
 .hero-image {
-  height: 500px;
+  width:397px;
+  height: 520px;
   object-fit: contain;
-  border-radius: 20px;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
+  margin-top:80px;
+  padding-left:743px;
 }
 
 .panel-container {
