--- a/css/styles.css
+++ b/css/styles.css
@@ -135,12 +135,11 @@
   margin-top: 20px;
 }
 
-.hero-image {
+.hero-image-container {
   width:397px;
   height: 520px;
   margin-top:80px;
-  padding-left:743px;
-  padding-right:100px;
+  margin-right:100px;
   background-color: #1D1D1D;
 }
 
