--- a/css/styles.css
+++ b/css/styles.css
@@ -93,9 +93,9 @@
   flex-direction: row;
   width: 1240px;
   height: 600px;
-  margin-top: 80px;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin: 80px auto 0 auto;
+  justify-content: space-between;
+  gap: 60px; 
   border-radius: 30px;
   background-color: #1d1d1d;
 }
