--- a/css/styles.css
+++ b/css/styles.css
@@ -145,19 +145,21 @@
 
 .panel-container {
   display: flex;
-  width: 1240px;
+  width: 1440px;
   height: 112px;
-  margin-top: 70px;
-  margin-bottom: 20px;
-  justify-content: center;
+  margin-top: 150px;
+  border: 1px solid #e7e9fc;
 }
 
 .panel-header {
-  text-align: center;
-  padding: 10px;
-  font-weight: normal;
+  width:1239px;
+  height:auto;
+  white-space:nowrap;
+  margin-top:24px;
+  padding-left:100px;
+  font-weight: 400;
   font-size: 50px;
-  line-height: 64px;
+  line-height: 1.1;
   letter-spacing: -2%;
   text-transform: uppercase;
   color: #bea69e;
@@ -169,11 +171,13 @@
 
 .about-container {
   display: flex;
-  width: 1240px;
-  height: 344px;
+  max-width: 1240px;
+  max-height: 344px;
   flex-direction: column;
   align-items: flex-start;
+  margin-top:150px;
   margin-left: 100px;
+  margin-right:100px;
   gap: 50px;
 }
 
@@ -185,8 +189,6 @@
   line-height: 54px;
   letter-spacing: -4%;
   color: white;
-  font-size: 30px;
-  margin-top: 150px;
 }
 
 .about-highlight {
@@ -196,14 +198,13 @@
 .about-description-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   max-width: 1240px;
   max-height: 240px;
-  padding: 50px;
+  gap: 50px;
 }
 .about-image {
-  width: 100px;
-  height: 50px;
+  width: 560px;
+  height: 240px;
   object-fit: cover;
   border-radius: 1000px;
   transform: rotate(90deg);
@@ -211,13 +212,13 @@
 .about-content {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   max-width: 630px;
   max-height: 220px;
   gap: 40px;
 }
 
 .about-text {
+  font-weight:400px;
   color: #fff;
   font-size: 16px;
   letter-spacing: -2%;
