--- a/css/styles.css
+++ b/css/styles.css
@@ -203,10 +203,11 @@
   gap: 50px;
 }
 .about-image {
-  width: 560px;
-  height: 240px;
+  width: 240px;
+  height: 560px;
   object-fit: cover;
   border-radius: 1000px;
+  transform: rotate(90deg);
 }
 .about-content {
   display: flex;
