--- a/css/styles.css
+++ b/css/styles.css
@@ -182,8 +182,8 @@
 }
 
 .about-title {
-  weight: 196;
-  height: 54px;
+  max-width: 196px;
+  max-height: 54px;
   font-size: 48px;
   font-weight: 500;
   line-height: 54px;
@@ -203,8 +203,8 @@
   gap: 50px;
 }
 .about-image {
-  width: 240px;
-  height: 560px;
+  width: 560px;
+  height: 240px;
   object-fit: cover;
   border-radius: 1000px;
   transform: rotate(90deg);
