--- a/css/styles.css
+++ b/css/styles.css
@@ -359,6 +359,7 @@
 .mentors-title {
   width:266px;
   height:54px;
+  white-space: nowrap;
   font-size: 48px;
   font-weight: 500;
   line-height: 54px;
@@ -382,9 +383,9 @@
 }
 
 .mentor-images{
-  flex-direction: column;
-  align-items: center;
   display:flex;
+  flex-direction: column;
+  justify-content: center;
   max-width:180px;
   max-height:250px;
   gap:16px;
