--- a/css/styles.css
+++ b/css/styles.css
@@ -374,10 +374,10 @@
 .mentor-image-container {
   display: flex;
   flex-direction:row;
+  justify-content: space-around;
   width:1034px;
   height:250px;
   margin-top:50px;  
-  align-items: center;
   gap: 100px;
 }
 
@@ -405,8 +405,6 @@
 }
 
 .mentor-name {
-  width: 174px;
-  height: 32px;
   font-size: 28px;
   font-weight: 500;
   line-height: 32px;
@@ -415,8 +413,6 @@
 }
 
 .mentor-bio {
-  width: 174px;
-  height: 18px;
   font-size: 14px;
   line-height: 18px;
   letter-spacing: -2%;
