--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+h1, h2, h3, h4, h5, h6, p, ul {
+  margin: 0;
+  padding: 0;
+  white-space: nowrap;
+}
 .dark-theme {
   background-color: #121212;
   margin: 0;
@@ -400,7 +405,7 @@
 }
 
 .mentor-name {
-  font-size: 24px;
+  font-size: 28px;
   font-weight: 500;
   line-height: 32px;
   color: #FFFFFF;
